[package]
name = "gas-agent"
version = "0.0.1"
edition = "2021"

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
lto = "fat"
incremental = false
panic = "abort"

[dependencies]
alloy = { version = "^0", default-features = false, features = [
    "signer-local",
] }

tokio = { version = "^1", features = ["full"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
anyhow = "^1"
clap = { version = "^4", features = ["derive", "env"] }
strum_macros = "^0"
strum = "^0"
reqwest = { version = "^0", features = ["json"] }
chrono = { version = "0.4.39", features = ["serde"] }
rand = "0.9"
rust_decimal = "^1"
rust_decimal_macros = "^1"
ntex = { version = "^2", features = ["tokio"] }
futures = "^0"
tracing = "^0"
opentelemetry-prometheus = "0.17.0"

opentelemetry_sdk = { version = "0.24", default-features = false, features = [
    "metrics",
] }

tracing-subscriber = { version = "^0", features = [
    "json",
    "env-filter",
    "time",
] }
