[package]
name = "gas-agent"
version = "0.0.4"
edition = "2021"

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
lto = "fat"
incremental = false
panic = "abort"

[dependencies]
alloy = { version = "~0.12.0", default-features = false, features = [
    "signer-local",
] }

tokio = { version = "~1.44.0", features = ["full"] }
serde = { version = "~1.0.219", features = ["derive"] }
serde_json = "~1.0.133"
anyhow = "~1.0.93"
clap = { version = "~4.5.37", features = ["derive", "env"] }
strum_macros = "~0.26.4"
strum = "~0.26.3"
reqwest = { version = "~0.12.9", features = ["json"] }
chrono = { version = "~0.4.39", features = ["serde"] }
rand = "~0.9.0"
rust_decimal = "~1.36.0"
rust_decimal_macros = "~1.36.0"
ntex = { version = "~2.5.0", features = ["tokio"] }
futures = "~0.3.31"
tracing = "~0.1.41"
dotenv = "~0.15.0"
opentelemetry-prometheus = "~0.17.0"
bytes = "~1.10.1"
hex = "~0.4.3"

opentelemetry_sdk = { version = "~0.24.1", default-features = false, features = [
    "metrics",
] }

tracing-subscriber = { version = "~0.3.18", features = [
    "json",
    "env-filter",
    "time",
] }
